--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "^14.2.9",
     "@angular/cli": "~14.2.9",
     "@angular/compiler-cli": "^14.2.0",
+    "@testing-library/angular": "^12.1.2",
     "@types/jest": "^29.2.3",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
