--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "~14.2.9",
     "@angular/compiler-cli": "^14.2.0",
     "@testing-library/angular": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.2.3",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
