--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,8 @@
     "outDir": "./out-tsc/spec",
     "module": "CommonJs",
     "types": [
-       "jest"
+       "jest",
+      "@testing-library/jest-dom"
     ]
   },
   "files": [
