--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@testing-library/angular": "^12.1.2",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
