--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^29.2.3",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.2",
+    "ng-mocks": "^14.3.3",
     "typescript": "~4.7.2"
   }
 }
